# adventofcode

./: pyproject.toml
2021/: 4.csv  data.py  script_3-2.py  script_4.py  script_5.py
2022/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py
2023/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  pyproject.toml
2024/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day6_2.py  day7.py  day8.py  day8_2.py  day9.py
