[tool.poetry]
name = "2023"
version = "0.1.0"
description = ""
authors = ["Bas <57452503+basekkelenkamp@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
regex = "^2023.10.3"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
